[gd_scene load_steps=4 format=3 uid="uid://bfowp06msedww"]

[ext_resource type="Script" uid="uid://cmpv5b4uec1i8" path="res://scripts/treatment_room.gd" id="1_qhxvu"]
[ext_resource type="Texture2D" uid="uid://c7mhv1k78bfh6" path="res://Texture/bed_1.png" id="2_ixgyv"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ixgyv"]
size = Vector2(81, 76)

[node name="TreatmentRoom" type="Area2D"]
script = ExtResource("1_qhxvu")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_ixgyv")
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_ixgyv")

[node name="CleaningTimer" type="Timer" parent="."]

[node name="CleaningBar" type="TextureProgressBar" parent="."]
offset_left = -56.0
offset_top = -39.0
offset_right = -55.0
offset_bottom = -38.0

[node name="PatientPosition" type="Marker2D" parent="."]

[node name="TreatmentTimer" type="Timer" parent="."]
wait_time = 12.0
one_shot = true

[node name="TreatmentBar" type="TextureProgressBar" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[connection signal="input_event" from="." to="." method="_on_input_event"]
